--- a/Blockchain/Blockchain.csproj
+++ b/Blockchain/Blockchain.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
       <PackageReference Include="BouncyCastle" Version="1.8.9" />
+      <PackageReference Include="CsvHelper" Version="27.2.1" />
     </ItemGroup>
 
 </Project>
